--- a/sid-bar/index.html
+++ b/sid-bar/index.html
@@ -8,11 +8,47 @@
     <title>sid-bar</title>
   </head>
   <body>
-    <div>
-      <span>1</span>
-      <span>2</span>
-      <span>3</span>
-      <span>4</span>
+    <div class="container">
+      <ul>
+        <li class="list active">
+          <a href="#">
+            <span class="icon"><ion-icon name="home"></ion-icon></span>
+            <span class="title">Home</span>
+          </a>
+        </li>
+        <li class="list">
+          <a href="#">
+            <span class="icon"
+              ><ion-icon name="id-card-outline"></ion-icon
+            ></span>
+            <span class="title">Sobre</span>
+          </a>
+        </li>
+        <li class="list">
+          <a href="#">
+            <span class="icon"><ion-icon name="exit"></ion-icon></span>
+            <span class="title">Exit</span>
+          </a>
+        </li>
+      </ul>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+
+    <script>
+      const list = document.querySelectorAll('.list')
+      function atcivelink() {
+        list.forEach(item => item.classList.remove('active'))
+        this.classList.add('active')
+      }
+
+      list.forEach(item => item.addEventListener('click', atcivelink))
+    </script>
   </body>
 </html>
